# tradingrunner

./: .gitignore  .pre-commit-config.yaml  README.md  devenv.nix  devenv.yaml  hello.py  learning.jupyterlab-workspace  main.ipynb  pyproject.toml  requirements.txt
.github/workflows/: cicd.yml
