[tool.poetry]
name = "tradingrunner"
version = "0.1.0"
description = ""
authors = ["onielsen <ovznielsen@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
async-generator = "1.10"
certifi = "2023.7.22"
certipy = "0.1.3"
contourpy = "1.2.0"
cycler = "0.12.1"
fonttools = "4.50.0"
ipython-genutils = "0.2.0"
kiwisolver = "1.4.5"
matplotlib = "3.8.3"
mplfinance = "0.12.10b0"
numpy = "1.26.4"
pandas = "2.2.1"
pillow = "10.3.0"
pyparsing = "3.1.2"
python-bingx = "1.0.0"
scipy = "1.12.0"
tzdata = "2024.1"
websockets = "12.0"
notebook = "^7.1.2"
ipykernel = "^6.29.4"
python-lsp-server = {extras = ["all"], version = "^1.11.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
